update portrait img

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                   </p>
                </div>
                <div class="portrait">
-                  <!-- <img src="img/portrait.jpg"> -->
+                  <img src="img/portrait.jpg">
                </div>
             </div>
          </div>
