--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                      The satisfaction of producing a site from scratch and seeing it come to life is an awesome feeling as well.<br><br>
 
                      I love the design aspect of the web dev field and I really enjoy working with other creative and innovative people. I look forward to
-                     diving even deeper into this field while learning more frameworks and languages to further enhance my skillset.<br><br>
+                     learning more frameworks and languages to further enhance my skillset.<br><br>
 
                      When I'm not coding, you can find me in the gym lifting heavy things, bumping my head to the newest hip-hop album, or grabbing a drink at a bar with some friends.
                   </p>
