--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 
   	gtag('config', 'UA-119545634-1');
 	</script>
+	<script
+  	src="https://code.jquery.com/jquery-3.3.1.min.js"
+  	integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+  	crossorigin="anonymous"></script>
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -62,7 +66,7 @@
                <a href="mailto:jcawaling2@gmail.com"><i class="fas fa-envelope"></i></a>
             </div>
             <ul class="main-nav list-unstyled">
-               <li><a href="#"><span class="home">Home</span></a></li>
+               <li><a href="#"><span class="home" id="red">Home</span></a></li>
                <li><a href="#about">About</a></li>
                <li><a href="#projects">Projects</a></li>
                <li><a href="#contact">Contact</a></li>
@@ -79,7 +83,7 @@
    </header>
 
    <!-- ABOUT SECTION -->
-   <section id="about">
+   <section id="about" class="js--section-about">
       <div class="section-content">
          <div class="row">
             <div class="container">
@@ -232,6 +236,7 @@
       </div>
    </footer>
 
+	<script src="js/jquery.waypoints.min.js"></script>
    <script src="js/app.js" charset="utf-8"></script>
   </body>
 </html>
